fix large messages overlap

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -88,9 +88,7 @@
 
 .message-list {
     margin-top: 5px;
-    display: flex;
     max-height: 100%;
-    flex-direction: column;
     overflow-y: scroll;
 }
 
@@ -116,6 +114,7 @@
 }
 
 .message-body {
+    margin-top: 10px;
     font-family: 'Noto Sans', sans-serif; 
     font-size: 15px;
 }
